JDK-7185614 : NMT ON: "check by caller" assertion failed on nsk ThreadMXBean test
  • Type: Bug
  • Component: hotspot
  • Sub-Component: runtime
  • Affected Version: hs24
  • Priority: P4
  • Status: Closed
  • Resolution: Fixed
  • OS: solaris_11
  • CPU: sparc
  • Submitted: 2012-07-20
  • Updated: 2014-02-04
  • Resolved: 2012-08-27
The Version table provides details related to the release that this issue/RFE will be addressed.

Unresolved : Release in which this issue/RFE will be addressed.
Resolved: Release in which this issue/RFE has been resolved.
Fixed : Release in which this issue/RFE has been fixed. The release containing this fix may be available for download as an Early Access Release or a General Availability Release.

To download the current JDK release, click here.
JDK 7 JDK 8 Other
7u40Resolved 8Fixed hs24Fixed
Description
"check by caller" assertion failed on 7/19's nightly. The testcase is: nsk/monitoring/ThreadMXBean/ThreadInfo/RunningThread/RunningThread002

The problem is that, NMT is shut down between calller's check and assertion.
#
# A fatal error has been detected by the Java Runtime Environment:
#
#  Internal Error (/tmp/jprt/P1/132204.zhgu/s/src/share/vm/services/memTracker.hpp:187), pid=23779, tid=8
#  assert(is_on()) failed: check by caller
#
# JRE version: Java(TM) SE Runtime Environment (7.0_06-b20)
# Java VM: Java HotSpot(TM) Client VM (24.0-b17-internal-201207191322.zhgu.hotspot-fastdebug mixed mode, sharing solaris-sparc )
# Core dump written. Default location: /export/local/80813.JAVASE.NIGHTLY.VM.RT_Baseline.2012-07-19.solaris-sparc_vm__client_mixed_nsk.quick-monitoring.testlist.runTests/results/ResultDir/RunningThread002/core or core.23779
#
# If you would like to submit a bug report, please visit:
#   http://bugreport.sun.com/bugreport/crash.jsp
#

---------------  T H R E A D  ---------------

Current thread (0x00152000):  JavaThread "C1 CompilerThread0" daemon [_thread_in_native, id=8, stack(0xed600000,0xed680000)]

Stack: [0xed600000,0xed680000],  sp=0xed67ead0,  free space=506k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V  [libjvm.so+0xe539a4]  void VMError::report_and_die()+0x7e8;;  __1cHVMErrorOreport_and_die6M_v_+0x7e8
V  [libjvm.so+0x5124b8]  void report_vm_error(const char*,int,const char*,const char*)+0x74;;  __1cPreport_vm_error6Fpkci11_v_+0x74
V  [libjvm.so+0xbc0fc8]  void*os::malloc(unsigned,unsigned short,unsigned char*)+0x47c;;  __1cCosGmalloc6FIHpC_pv_+0x47c
V  [libjvm.so+0xbc02d8]  char*os::strdup(const char*,unsigned short)+0x24;;  __1cCosGstrdup6FpkcH_pc_+0x24
V  [libjvm.so+0x447ed0]  void CodeComments::add_comment(int,const char*)+0x4c;;  __1cMCodeCommentsLadd_comment6Mipkc_v_+0x4c
V  [libjvm.so+0x2bef60]  void LIR_Assembler::emit_lir_list(LIR_List*)+0x168;;  __1cNLIR_AssemblerNemit_lir_list6MpnILIR_List__v_+0x168
V  [libjvm.so+0x2bebf0]  void LIR_Assembler::emit_code(BlockList*)+0xa4;;  __1cNLIR_AssemblerJemit_code6MpnJBlockList__v_+0xa4
V  [libjvm.so+0x261bac]  int Compilation::emit_code_body()+0x10c;;  __1cLCompilationOemit_code_body6M_i_+0x10c
V  [libjvm.so+0x2620e4]  int Compilation::compile_java_method()+0x458;;  __1cLCompilationTcompile_java_method6M_i_+0x458
V  [libjvm.so+0x262340]  void Compilation::compile_method()+0xb0;;  __1cLCompilationOcompile_method6M_v_+0xb0
V  [libjvm.so+0x262fb4]  Compilation::Compilation(AbstractCompiler*,ciEnv*,ciMethod*,int,BufferBlob*)+0x1f4;;  __1cLCompilation2t6MpnQAbstractCompiler_pnFciEnv_pnIciMethod_ipnKBufferBlob__v_+0x1f4
V  [libjvm.so+0x2659c0]  void Compiler::compile_method(ciEnv*,ciMethod*,int)+0x3c8;;  __1cICompilerOcompile_method6MpnFciEnv_pnIciMethod_i_v_+0x3c8
V  [libjvm.so+0x47ec14]  void CompileBroker::invoke_compiler_on_method(CompileTask*)+0x1714;;  __1cNCompileBrokerZinvoke_compiler_on_method6FpnLCompileTask__v_+0x1714
V  [libjvm.so+0x47cf2c]  void CompileBroker::compiler_thread_loop()+0x71c;;  __1cNCompileBrokerUcompiler_thread_loop6F_v_+0x71c
V  [libjvm.so+0xdafce0]  void JavaThread::thread_main_inner()+0x2f4;;  __1cKJavaThreadRthread_main_inner6M_v_+0x2f4
V  [libjvm.so+0xdaf994]  void JavaThread::run()+0x354;;  __1cKJavaThreadDrun6M_v_+0x354
V  [libjvm.so+0xbc9b54]  java_start+0x254;;  java_start+0x254

Comments
EVALUATION http://hg.openjdk.java.net/hsx/hotspot-main/hotspot/rev/4acebbe310e1
22-08-2012

EVALUATION http://hg.openjdk.java.net/hsx/hotspot-rt/hotspot/rev/4acebbe310e1
02-08-2012