7185614: NMT ON: "check by caller" assertion failed on nsk ThreadMXBean test 7187429: NMT ON: Merge failure should cause NMT to shutdown

Fixed NMT assertion failures

Reviewed-by: acorn, kvn